<resources>
    <string name="disable_cfb_forbidden">Your service provider does not support disabling call forwarding when your phone is busy.</string>
    <string name="disable_cfnry_forbidden">"Your service provider does not support disabling call forwarding when your phone doesn't answer."</string>
    <string name="disable_cfnrc_forbidden">Your service provider does not support disabling call forwarding when your phone is unreachable.</string>
    <string name="sip_settings">SIP settings</string>
    <string name="sip_accounts">SIP accounts</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_receive_calls">Receive incoming calls</string>
    <string name="sip_receive_calls_summary">Uses more battery power</string>
    <string name="sip_call_options_title">Use SIP calling</string>
    <string name="sip_call_options_wifi_only_title">Use SIP calling (Wi-Fi only)</string>
    <string name="sip_call_options_entry_1">For all calls when data network is available</string>
    <string name="sip_call_options_entry_2">Only for SIP calls</string>
    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
    <string name="add_sip_account">Add</string>
    <string name="remove_sip_account">Delete account</string>
    <string name="sip_account_list">SIP accounts</string>
    <string name="saving_account">Saving the account…</string>
    <string name="removing_account">Deleting the account…</string>
    <string name="sip_menu_save">SAVE</string>
    <string name="sip_menu_discard">DISCARD</string>
    <string name="alert_dialog_close">Close the profile</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="close_profile">Close</string>
    <string name="registration_status_checking_status">Checking status...</string>
    <string name="registration_status_registering">Registering…</string>
    <string name="registration_status_still_trying">Still trying…</string>
    <string name="registration_status_not_receiving">Not receiving calls.</string>
    <string name="registration_status_no_data">Account registration stopped because there is no Internet connection.</string>
    <string name="registration_status_no_wifi_data">Account registration stopped because there is no Wi-Fi connection.</string>
    <string name="registration_status_not_running">Account registration unsuccessful.</string>
    <string name="registration_status_done">Receiving calls.</string>
    <string name="registration_status_failed_try_later">Account registration unsuccessful: (%s); will try later</string>
    <string name="registration_status_invalid_credentials">Account registration unsuccessful: Incorrect username or password.</string>
    <string name="registration_status_server_unreachable">Account registration unsuccessful: Check the server name.</string>
    <string name="third_party_account_summary">This account is currently in use by the %s app.</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="sip_edit_new_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="advanced_settings_hide">▽ Touch to hide all</string>
    <string name="empty_alert">"%s is required and can't be left blank."</string>
    <string name="not_a_valid_port">Port number should be within 1000 and 65534.</string>
    <string name="no_internet_available">To place a SIP call, check your Internet connection first.</string>
    <string name="no_wifi_available">You need to be connected to a Wi-Fi network for SIP calls (use the Wireless &amp; Network settings).</string>
    <string name="no_voip">SIP calling not supported</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="sip_always_send_keepalive">Always send</string>
    <string name="sip_always">SIP_ALWAYS</string>
    <string name="sip_address_only">SIP_ADDRESS_ONLY</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="auth_username">AuthUserName</string>
    <string name="sip_connection_service_label">Built-in SIP calling</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="anc_title">Active Noise Reduction</string>
    <string name="anc_on">ANC on</string>
    <string name="cdma_labelCFU">Always forward</string>
    <string name="cdma_labelCFB">Forward when busy</string>
    <string name="cdma_labelCFNRy">Forward when unanswered</string>
    <string name="cdma_labelCFNRc">Forward when unreachable</string>
    <string name="cdma_labelCFC">Cancel all forwarding</string>
    <string name="cdma_label_do_not_disturb">Do not disturb</string>
    <string name="cdma_label_voice_message_retrieve">Voice message retrieve</string>
    <string name="title_cf_option_phone_number">Forward to phone number</string>
    <string name="title_cf_option_voice_mail">Forward to voice mail</string>
    <string name="title_cf_option_stop">Stop forwarding</string>
    <string name="ecc_title">Emergency number</string>
    <string name="sum_call_barring_disabled">Disabled</string>
    <string name="call_barring_baoc">All outgoing</string>
    <string name="call_barring_baoic">Outgoing international</string>
    <string name="call_barring_baoicr">Outgoing international roaming</string>
    <string name="call_barring_baic">All incoming</string>
    <string name="call_barring_baicr">Incoming international roaming</string>
    <string name="call_barring_deactivate_all">Deactivate Call Barring</string>
    <string name="call_barring_deactivate_all_description">Disable all Call Barring settings</string>
    <string name="call_barring_change_pwd">Change password</string>
    <string name="call_barring_change_pwd_description">Change Call Barring password</string>
    <string name="messageCallBarring">Enter password</string>
    <string name="phone_settings_prefix_setting_txt">Prefix settings</string>
    <string name="clh_vm_show_in_call_log_txt">Show voicemails in call log</string>
    <string name="clh_vm_name_in_call_log_txt">Voicemail name in call log</string>
    <string name="clh_vm_name_dialog_title_txt">Voicemail name</string>
    <string name="clh_vm_received_number_txt">Received voicemail number</string>
    <string name="clh_vm_received_number_dialog_title_txt">Received number</string>
    <string name="sms_domain_title">Enable SMS over IMS</string>
    <string name="sms_domain_summary_txt">Turn on to send SMS over IMS</string>
    <string name="conf_uri_title_main">Conference call server</string>
    <string name="phone_strings_ans_mach_settings_app_bar_txt">Xperia™ Answering Machine</string>
    <string name="phone_settings_call_blocking_txt">Call Blocking</string>
    <string name="cancel">Cancel</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_accounts_settings_header">Settings</string>
    <string name="phone_accounts_all_calling_accounts">All calling accounts</string>
    <string name="phone_accounts_all_calling_accounts_summary">Select which accounts can make calls</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="labelCF">Call forwarding</string>
    <string name="messageCFU">Always use this number</string>
    <string name="enable">Turn on</string>
    <string name="disable">Turn off</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="fdn">Fixed dialing numbers</string>
    <string name="sum_fdn">Manage fixed dialing numbers</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="other_settings">Other call settings</string>
    <string name="selectContact">select contact</string>
    <string name="respond_via_sms_setting_title">Reject call with message</string>
    <string name="respond_via_sms_setting_summary">Manage reject messages for incoming calls</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_visual_voicemail_switch_title">Visual Voicemail</string>
    <string name="voicemail_notification_ringtone_title">Notification sound</string>
    <string name="sounds_and_vibration_title">Sounds and vibration</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="dtmf_tone_length_title">Dialpad tone length</string>
    <string name="enable_video_calling_title">Turn on video calling</string>
    <string name="voicemail_notification_ringtone_key">voicemail_notification_ringtone_key</string>
    <string name="voicemail_notification_vibrate_key">voicemail_notification_vibrate_key</string>
    <string name="voicemail_visual_voicemail_key">voicemail_visual_voicemail_key</string>
    <string name="wifi_calling_settings_key">button_wifi_calling_settings_key</string>
</resources>