<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/labelCF"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <Preference android:persistent="false" android:title="@string/cdma_labelCFU" android:key="button_cfu_key" />
    <Preference android:persistent="false" android:title="@string/cdma_labelCFB" android:key="button_cfb_key" />
    <Preference android:persistent="false" android:title="@string/cdma_labelCFNRy" android:key="button_cfnry_key" />
    <Preference android:persistent="false" android:title="@string/cdma_labelCFNRc" android:key="button_cfnrc_key" />
    <Preference android:persistent="false" android:title="@string/cdma_labelCFC" android:key="button_cfc_key" />
</PreferenceScreen>