<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/textAppearanceMedium"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <RadioGroup android:id="@id/cf_options" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/cf_option_phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/title_cf_option_phone_number" />
        <RadioButton android:id="@id/cf_option_voice_mail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_cf_option_voice_mail" />
        <RadioButton android:id="@id/cf_option_stop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_cf_option_stop" />
    </RadioGroup>
    <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/button_cancel" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" />
        <Button android:id="@id/button_ok" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>